# GameFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_build.sh  imgui.ini  premake4.lua  renderdoc.cap  run.bat
assets/shaders/: Base.fs  Base.glsl  Base.vs  BrdfShader.fs  CSMShader.fs  CSMShader.gs  CSMShader.vs  DepthNormalPass.fs  DepthNormalPass.vs  GBuffer.fs  GBuffer.vs  Image2CubeMap.fs  IrradianceConvolution.fs  LightingPass.fs  LightingPass.vs  RenderLightProbe.fs  RenderLightProbe.gs  RenderLightProbe.vs  SSAOBlurPass.fs  SSAOGeometry.fs  SSAOPass.fs  SkyBox.fs  SkyBox.vs  SphereCubemap.fs  SphereCubemap.vs  UnlitShader.fs  UnlitShader.vs  glyph.fs  glyph.vs  sprite.fs  sprite.glsl  sprite.vs  textureToScreen.fs
data/shaders/: Base.glsl  PhongMaterial.glsl  TestLightSource.glsl  Texture.glsl
data/textures/: pid_controller
libraries/fmod/api/core/examples/: common_platform.cpp
libraries/fmod/api/core/lib/x86_64/: libfmodL.so.13.5
libraries/fmod/api/studio/: Dropped text.txt
libraries/freetype-2.11.1/builds/unix/: configure
libraries/freetype-2.11.1/builds/unix/autom4te.cache/: output.0  output.1
libraries/freetype-2.12.1/builds/unix/autom4te.cache/: requests  traces.0  traces.1
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: Base.fs  Base.glsl  Base.vs  BrdfShader.fs  CSMShader.fs  CSMShader.gs  CSMShader.vs  DepthNormalPass.fs  DepthNormalPass.vs  GBuffer.fs  GBuffer.vs  Image2CubeMap.fs  Image2CubeMap.vs  IrradianceConvolution.fs  IrradianceConvolution.vs  LightingPass.fs  LightingPass.vs  PhongMaterial.glsl  PointDepthShader.fs  PointDepthShader.gs  Prefilter.fs  RenderLightProbe.fs  RenderLightProbe.gs  RenderLightProbe.vs  SSAOBlurPass.fs  SSAOGeometry.fs  SSAOPass.fs  SkyBox.fs  SkyBox.vs  SphereCubemap.fs  SphereCubemap.vs  TestLightSource.glsl  UnlitShader.fs  UnlitShader.vs  glyph.vs  sprite.fs  sprite.glsl  sprite.vs  textureToScreen.fs  textureToScreen.vs
src/: Box.cpp  Box.h  Ground.cpp  Ground.h  UI.cpp  UI.h  anthology.cpp  anthology.h  anthology_math.h  anthology_opengl.cpp  anthology_opengl.h  anthology_renderer.cpp  anthology_renderer.h  anthology_types.h  application.cpp  application.h  asset.cpp  asset.h  asset_loader.h  asset_system.cpp  asset_system.h  asset_types.h  audio.cpp  audio.h  camera.h  common.h  component.h  components.h  content.cpp  content.h  entity.h  entity_manager.h  entry.cpp  event.cpp  event.h  game.cpp  game.h  game_state.cpp  game_state.h  gl_render.cpp  (+59 more)
src/audio/: fmod_audio.cpp  fmod_audio.h  mini_audio.cpp  mini_audio.h
src/debug/: b2_debug_draw.cpp  b2_debug_draw.h  b2_lines.cpp  b2_lines.h  b2_misc.cpp  b2_misc.h  b2_points.cpp  b2_points.h  b2_triangles.cpp  b2_triangles.h  debug.cpp  debug.h
src/graphics/: camera.h  font.cpp  font.h  gfx.h  gl_render_device.cpp  render_device.h  render_primatives.h  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  sprite.fs  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
src/old/: anthology.cpp  anthology.h  anthology_input.h  anthology_math.h  anthology_opengl.cpp  anthology_opengl.h  anthology_renderer.cpp  anthology_renderer.h  sdl2_anthology.cpp  sdl2_anthology.h
src/physics/: collision_event.h  collision_shape2d.h  physics_body2d.h  physics_system.cpp  physics_system.h
tools/AssetConverter/: AssetConverter.h  FBXConverter.cpp  GLBConverter.cpp  ImageConverter.cpp  main.cpp  temp.txt
